:bug: cross browser comp fix scrollbar

--- a/src/components/scrollingbar/style.scss
+++ b/src/components/scrollingbar/style.scss
@@ -13,5 +13,7 @@
         margin: 0;
         margin-left: 0.5rem;
         color: $black;
+        white-space: nowrap;
+        text-wrap: nowrap;
     }
 }
